--- a/src/main/resources/static/css/sidebarForAdmin.css
+++ b/src/main/resources/static/css/sidebarForAdmin.css
@@ -9,6 +9,8 @@
   background: #000;
   padding: 30px 0px;
   position: fixed;
+  transition: 0.3s;
+  list-style: none;
 }
 
 .wrapper .sidebar ul {
@@ -34,14 +36,20 @@
   width: 25px;
 }
 
-.wrapper .sidebar ul li:hover{
-  background-color: #000;
+.wrapper .sidebar ul li a:hover{
+  background: #000;
 }
     
-.wrapper .sidebar ul li:hover a{
+.wrapper .sidebar ul li a:hover{
   color: #fff;
 }
-
+.wrapper .sidebar.stickyside ul li a {
+  transition: 0.3s;
+}
+.wrapper .sidebar.stickyside ul li a:hover{
+  color: #000;
+  transform: scale( 2.0 );
+}
 .wrapper .main_content{
   width: 100%;
   margin-left: 200px;
@@ -64,7 +72,20 @@
 .wrapper .main_content .info div{
   margin-bottom: 20px;
 }
+.wrapper .sidebar.stickyside{
+  background: #fff;
+  padding: 100px 100px 400px 100px;
 
+}
+.wrapper .sidebar.stickyside ul {
+  color: #000;
+  list-style: none;
+  
+}
+.wrapper .sidebar.stickyside ul a {
+  display: flex;
+  flex-direction: row;
+}
 @media (max-height: 500px){
   .social_media{
     display: none !important;
