--- a/src/main/resources/static/css/movieWriteForm.css
+++ b/src/main/resources/static/css/movieWriteForm.css
@@ -9,7 +9,7 @@
 .addMovieMain tr td select,
 .addMovieMain tr td input{
     font-size: 50px;
-    min-width: 500px;
+    width: 400px;
 }
 .addMovieMain tr th {
     text-align: justify;
@@ -41,7 +41,6 @@
 }
 .btns {
     margin-left: 50%;
-    margin-bottom: 10%;
 }
 .btns input {
     font-size: 30px;
