--- a/src/main/resources/static/css/sidebarForAdmin.css
+++ b/src/main/resources/static/css/sidebarForAdmin.css
@@ -4,13 +4,14 @@
 
 .wrapper .sidebar{    
   width: 150px;
-  height: 75vh;
+  height: 50vh;
   text-align: center;
   background: #000;
-  padding: 30px 0px;
+  padding: 15px 0px;
   position: fixed;
   transition: 0.3s;
   list-style: none;
+  top: 20%;
 }
 
 .wrapper .sidebar ul {
@@ -43,17 +44,9 @@
 .wrapper .sidebar ul li a:hover{
   color: #fff;
 }
-.wrapper .sidebar.stickyside ul li a {
-  transition: 0.3s;
-}
-.wrapper .sidebar.stickyside ul li a:hover{
-  color: #000;
-  transform: scale( 2.0 );
-}
+
 .wrapper .main_content{
   width: 100%;
-  margin-left: 200px;
-  margin-top: 150px;
 }
 
 .wrapper .main_content .header{
@@ -64,7 +57,6 @@
 }
 
 .wrapper .main_content .info{
-  margin: 20px;
   color: #717171;
   line-height: 25px;
 }
@@ -72,20 +64,8 @@
 .wrapper .main_content .info div{
   margin-bottom: 20px;
 }
-.wrapper .sidebar.stickyside{
-  background: #fff;
-  padding: 100px 100px 400px 100px;
 
-}
-.wrapper .sidebar.stickyside ul {
-  color: #000;
-  list-style: none;
-  
-}
-.wrapper .sidebar.stickyside ul a {
-  display: flex;
-  flex-direction: row;
-}
+
 @media (max-height: 500px){
   .social_media{
     display: none !important;
