--- a/src/main/resources/static/css/movieWriteForm.css
+++ b/src/main/resources/static/css/movieWriteForm.css
@@ -1,6 +1,6 @@
 .addMovieMain {
     margin-top: 200px;
-    margin-left: 10%;
+    margin-left: 30%;
     margin-bottom: 50px;
     display: flex;
     
@@ -8,7 +8,7 @@
 .addMovieMain tr th,
 .addMovieMain tr td select,
 .addMovieMain tr td input{
-    font-size: 50px;
+    font-size: 30px;
     width: 400px;
 }
 .addMovieMain tr th {
@@ -22,16 +22,16 @@
 	float: left;
 }
 .addMovieMain tr .left input {
-	min-width: 200px;
-	font-size: 20px;
+	min-width: 150px;
+	font-size: 15px;
 	
 }
 .addMovieMain tr th::after {
     content: "";
     display: block;
-    width: 50%;
+    width: 30%;
     border-bottom: 1px solid #000;
-    margin-bottom: 100px;
+    margin-bottom: 55px;
 }
 .addMovieMain tr td {
     align-items: center;
@@ -41,6 +41,8 @@
 }
 .btns {
     margin-left: 50%;
+    margin-bottom: 10%;
+    
 }
 .btns input {
     font-size: 30px;
