--- a/src/main/resources/static/css/event.css
+++ b/src/main/resources/static/css/event.css
@@ -44,3 +44,17 @@ article h1 {
 	min-width: 300px;
 	height: 300px;
 }
+.imgDetail img {
+	width: 100%;
+}
+article input {
+	font-size: 20px;
+    padding: 5px 30px;   
+    color: #e0e0e0;
+    background: #212121;
+    cursor: pointer;
+    margin-bottom: 10px;
+    display: flex;
+    margin-top: 50px;
+    margin-inline: auto;
+}
