--- a/src/main/resources/static/css/loginjoin.css
+++ b/src/main/resources/static/css/loginjoin.css
@@ -97,7 +97,7 @@ section .loginjoin .user .imgBx img{
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 800px;
     object-fit: cover;
 }
 section .loginjoin .user .formBx {
